Remove --illegal-access=permit, add
Signed-off-by: Byron Marohn <combustible@live.com>